# ARIA---Autonomous-Reasoning-Interaction-Agent

./: .env.example  .gitignore  LICENSE  PROJECT_STATE.md  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  DEMO.md  FINAL_REPORT.md  HACKATHON_PITCH.md  NPM_WRAPPER.md  PUBLISHING.md
scripts/: final_demo.sh
src/aria/: __init__.py  harness.py  transcript.py
src/aria/agents/: __init__.py  report.py  research.py
src/aria/brain/: __init__.py  base.py  factory.py  mock.py  openai_responses.py
src/aria/browser/: __init__.py  agent.py  session.py
src/aria/cli/: __init__.py  main.py
src/aria/config/: settings.py
src/aria/memory/: __init__.py  base.py  chroma_store.py  factory.py  json_store.py
src/aria/planner/: react.py  types.py
src/aria/tools/: router.py  types.py
src/aria/vision/: __init__.py  claude.py
tests/: test_brain.py  test_browser_agent.py  test_browser_session.py  test_config.py  test_harness.py  test_memory.py  test_planner.py  test_research_agent.py  test_tool_router.py  test_transcript_pipeline.py
