[project]
name = "aria"
version = "0.1.0"
description = "Autonomous Reasoning and Interaction Agent CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.112.0",
    "chromadb>=1.5.9",
    "openai>=2.0.0",
    "playwright>=1.60.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=15.0.0",
]

[project.scripts]
aria = "aria.cli.main:app"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "_research_repos", "reports", ".aria"]
asyncio_mode = "auto"
